# rwf

./: .editorconfig  .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  index.html  sitemap.xml  t1
examples/background-jobs/: Cargo.toml  README.md  rwf.toml
examples/background-jobs/migrations/: 1_rum_jobs.up.sql
examples/background-jobs/src/: main.rs
examples/cloudflare-worker/: Cargo.toml  wrangler.toml
examples/cloudflare-worker/src/: lib.rs
examples/crud/: Cargo.toml
examples/crud/src/: main.rs
examples/dynamic-templates/: Cargo.toml  README.md
examples/dynamic-templates/src/: main.rs
examples/dynamic-templates/templates/: index.html
examples/orm/: Cargo.toml  README.md  Rum.toml  rwf.toml
examples/orm/migrations/: 1_users.down.sql  1_users.up.sql
examples/orm/src/: main.rs
examples/rest/: Cargo.toml  README.md  Rum.toml
examples/rest/migrations/: 1_users.up.sql
examples/rest/src/: main.rs  rest.rs  secure.rs
examples/turbo/: Cargo.toml  Dockerfile  README.md  Rum.toml  rwf.toml
examples/turbo/migrations/: 1728779072_users.up.sql  1728836660_messages.down.sql  1728836660_messages.up.sql
examples/turbo/src/: main.rs
examples/turbo/src/controllers/: mod.rs
examples/turbo/src/models/: chat_message.rs  mod.rs  user.rs
examples/turbo/static/js/: form_controller.js  main.js  stimulus.js  turbo.js
examples/turbo/templates/: canvas.html  chat.html  chat_form.html  chat_message.html  footer.html  header.html  index.html  page.html  signup.html  typing.html
rum/: Cargo.toml
rum-tests/: Cargo.toml
rum-tests/migrations/: 0_rum.down.sql  0_rum.up.sql  1_users.up.sql  4_order_items.down.sql  order_items.up.sql  orders.up.sql  products.up.sql  users.up.sql
rum-tests/src/: main.rs
rum-tests/templates/: index.html  test.html
rum/src/: colors.rs  comms.rs  config.rs  crypto.rs  lib.rs  lock.rs  logging.rs  prelude.rs  server.rs
rum/src/controller/: auth.rs  error.rs  middleware.rs  mod.rs  request.rs  response.rs  route.rs  ser.rs  static_files.rs  util.rs  websocket.rs
rum/src/controller/middleware/: mod.rs  prelude.rs  rate_limiter.rs  secure_id.rs
rum/src/http/: authorization.rs  body.rs  cookies.rs  error.rs  handler.rs  head.rs  headers.rs  mod.rs  path.rs  path_engine.rs  path_handler.rs  request.rs  response.rs  route.rs  router.rs  server.rs  session.rs  url.rs
rum/src/http/path/: mod.rs  params.rs  part.rs  query.rs  tree.rs  with_regex.rs
rum/src/http/websocket/: message.rs  mod.rs
rum/src/job/: clock.rs  cron.rs  error.rs  job.rs  mod.rs  model.rs  worker.rs
rum/src/model/: callbacks.rs  column.rs  error.rs  escape.rs  exists.rs  explain.rs  filter.rs  insert.rs  join.rs  limit.rs  lock.rs  macros.rs  mod.rs  order_by.rs  placeholders.rs  row.rs  select.rs  update.rs  value.rs
rum/src/model/migrations/: bootstrap.sql  mod.rs  model.rs
rum/src/model/pool/: connection.rs  into_client.rs  mod.rs  transaction.rs
rum/src/view/: cache.rs  mod.rs  prelude.rs
rum/src/view/template/: context.rs  error.rs  head.html  language.txt  mod.rs  parser.rs  tokenizer.rs
rum/src/view/turbo/: mod.rs
rwf/: Cargo.toml
rwf-admin/: Cargo.toml  README.md  rwf.toml
rwf-admin/src/: lib.rs  main.rs
rwf-admin/src/controllers/: index.rs  jobs.rs  mod.rs  models.rs  requests.rs  test_controller.rs
rwf-admin/src/models/: mod.rs
rwf-admin/src/views/: mod.rs
rwf-admin/static/js/: model_controller.js  reload_controller.js  requests_controller.js
rwf-admin/static/rwf_admin/js/: reload_controller.js  requests_controller.js
rwf-admin/templates/rwf_admin/: head.html  index.html  jobs.html  model.html  model_new.html  model_pages.html  models.html  nav.html  records.html  reload.html  requests.html
rwf-cli/: Cargo.toml  README.md
rwf-cli/src/: add.rs  deploy.rs  logging.rs  main.rs  migrate.rs  remove.rs  setup.rs  util.rs
rwf-cli/src/templates/: Procfile  controller.rs.tpl  mod.rs.tpl  page-controller.rs.tpl  routes.rs.tpl
rwf-macros/: Cargo.toml  README.md
rwf-macros/src/: lib.rs  model.rs  openapi.rs  prelude.rs  render.rs  route.rs  user.rs
rwf-macros/tests/model/: relationship.expanded.rs  relationship.rs
rwf-ruby/: Cargo.toml  README.md  build.rs  headers.rb
rwf-ruby/src/: .clangd  Makefile  bindings.c  bindings.h  lib.rs  main.c  test_bindings
rwf-ruby/tests/: config.ru
rwf-ruby/tests/todo/config/: application.rb  cable.yml  credentials.yml.enc
rwf-tests/: .gitignore  Cargo.toml  ca.crt  certificate.crt  openapi.json  private.key
rwf-tests/certs/: cert.key.pem  cert.pem  root-ca.key.pem  root-ca.pem
rwf-tests/migrations/: 0_rum.down.sql  0_rum.up.sql  2_orders.up.sql  3_products.up.sql  4_order_items.up.sql  5_data.down.sql  5_data.up.sql  6_oidc.down.sql  6_oidc.up.sql
rwf-tests/src/: main.rs
rwf-tests/src/controllers/: mod.rs  rapidoc.json
rwf-tests/src/models/: mod.rs
rwf-tests/templates/: index.html
rwf/migrations/: 1733778837089567000_rwf_init.down.sql
rwf/src/: colors.rs  comms.rs  config.rs  crypto.rs  error.rs  hmr.rs  lib.rs  lock.rs  logging.rs  prelude.rs
rwf/src/admin/: controllers.rs  mod.rs
rwf/src/analytics/: mod.rs  requests.rs
rwf/src/controller/: auth.rs  engine.rs  error.rs  mod.rs  oidc.rs  openapi.rs  rack.rs  ser.rs  static_files.rs  turbo_stream.rs  user.rs  wsgi.rs
rwf/src/controller/middleware/: csrf.rs  mod.rs  prelude.rs  rate_limiter.rs  request_tracker.rs  (+1 more)
rwf/src/http/: authorization.rs  body.rs  cloudflare.rs  cookies.rs  encoder.rs  error.html  error.rs  form.rs  form_data.rs  handler.rs  head.rs  headers.rs  mod.rs  request.rs  response.rs  router.rs  server.rs  url.rs
rwf/src/job/: clock.rs  cron.rs  error.rs  mod.rs  model.rs  worker.rs
rwf/src/model/: callbacks.rs  column.rs  combine.rs  delete.rs  error.rs  escape.rs  exists.rs  explain.rs  filter.rs  insert.rs  join.rs  limit.rs  lock.rs  mod.rs  order_by.rs  picked.rs  placeholders.rs  prelude.rs  row.rs  select.rs  temporary.rs  update.rs  user.rs  value.rs  view.rs
rwf/src/view/: cache.rs  mod.rs  prelude.rs
(+343 files in other folders)
