[workspace]
resolver = "2"
members = [ "examples/auth", "examples/background-jobs", "examples/rest", "examples/dynamic-templates", "examples/middleware", "examples/orm", "examples/quick-start", "examples/scheduled-jobs", "examples/static-files", "examples/turbo",
    "rum",
    "rum-cli",
    "rum-macros",
    "rum-tests",
]
