[package]
name = "rum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-serde_json-1"]}
postgres-types= "*"
bytes = "*"
tokio = { version = "1", features = ["full"] }
thiserror = "*"
parking_lot = "*"
once_cell = "*"
tracing = "*"
tracing-subscriber = "*"
pluralizer = "0.4.0"
rum-macros = { path = "../rum-macros" }
colored = "2"
serde = "*"
serde_json = "*"
hyper = "1"
http = "1"
http-body-util = "*"
hyper-util = { version = "*", features = ["full"] }
futures = "0.3"