[package]
name = "rum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-serde_json-1"]}
bytes = "1"
tokio = { version = "1", features = ["net", "fs"] }
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rum-macros = { path = "../rum-macros" }
colored = "2"
serde = "1"
serde_json = "1"
async-trait = "0.1"
base64 = "0.22"
aes-gcm-siv = "0.11"
aes = "0.8"
rand = "0.8"
regex = "1"