[package]
name = "rum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["formatting", "serde", "parsing"]}
tokio-postgres = {version = "0.7", features = ["with-time-0_3", "with-serde_json-1"]}
bytes = "1"
tokio = { version = "1", features = ["net", "fs", "rt", "macros"] }
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rum-macros = { path = "../rum-macros" }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
base64 = "0.22"
aes-gcm-siv = "0.11"
aes = "0.8"
rand = { version = "0.8", features = ["getrandom"] }
regex = "1"
sha1 = "0.10"
toml = "0.8"