[package]
name = "rwf-admin"
version = "0.1.10"
edition = "2021"
include = ["/templates"]

[lib]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rwf = { path = "../rwf", version = ">=0.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = [
    "formatting",
    "serde",
    "parsing",
    "macros",
] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
