[package]
name = "rwf-admin"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "Admin panel for applications written with the Rust Web Framework"
homepage = "https://levkk.github.io/rwf/"
repository = "https://github.com/levkk/rwf"
keywords = ["mvc", "web", "framework", "http", "orm", "admin"]
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]
include = ["/templates", "/src"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rwf = { path = "../rwf", version = ">=0.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = [
    "formatting",
    "serde",
    "parsing",
    "macros",
] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
