[package]
name = "rwf-cli"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "Rust Web Framework CLI"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
rwf = { path = "../rwf" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
time = "0.3"
regex = "1"
