[package]
name = "rwf-cli"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Rust Web Framework CLI"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
rwf = { path = "../rwf", version = "0.1.14" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
time = "0.3"
regex = "1"
toml = "0.8"
flate2 = "1"
tar = "0.4"
serde_json = "1"
which = "7"
