[package]
name = "rwf-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Macros for the Rust Web Framework"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
pluralizer = "0.4"
