[package]
name = "rwf-macros"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Macros for the Rust Web Framework"
readme = "README.md"
homepage = "https://levkk.github.io/rwf/"
repository = "https://github.com/levkk/rwf"
keywords = ["rwf", "web", "framework", "macros"]
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
pluralizer = "0.4"
prettyplease = "0.2.37"

[dev-dependencies]
macrotest = "1"
