[package]
name = "rwf-ruby"
license = "MIT"
description = "Ruby (specifically Rack/Rails) bindings for the Rust Web Framework"
version = "0.1.1"
edition = "2021"
readme = "README.md"
homepage = "https://levkk.github.io/rwf/"
repository = "https://github.com/levkk/rwf"
keywords = ["rwf", "web", "framework", "ruby", "bindings"]
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]

[dependencies]
libc = "0.2"
once_cell = "1"
thiserror = "1"
parking_lot = "0.9"
tracing = "0.1"

[build-dependencies]
cc = "1"
bindgen = "0.68"
