[package]
name = "rwf-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rwf = { path = "../rwf" }
rwf-macros = { path = "../rwf-macros" }
rwf-admin = { path = "../rwf-admin" }
tokio = { version = "1", features = ["net", "fs", "rt-multi-thread"] }
tracing-subscriber = "*"
console-subscriber = "*"
serde_json = "1"
serde = "*"
parking_lot = "*"
tracing = "0.1.44"
openidconnect = { version = "4.0.1", features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.13.1", features = ["rustls-native-certs"] }
rustls = { version = "0.23.36", features = ["ring"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "serde", "parsing", "macros"] }
