[package]
name = "rwf"
version = "0.1.14"
edition = "2021"
license = "MIT"
description = "Framework for building web applications in the Rust programming language"
documentation = "https://levkk.github.io/rwf/"
readme = "README.md"
homepage = "https://levkk.github.io/rwf/"
repository = "https://github.com/levkk/rwf"
keywords = ["mvc", "web", "framework", "http", "orm"]
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wsgi = ["pyo3", "rayon"]
default = []
rack = ["rwf-ruby", "rayon"]

[dependencies]
time = { version = "0.3", features = ["formatting", "serde", "parsing"] }
tokio-postgres = { version = "0.7", features = [
    "with-time-0_3",
    "with-serde_json-1",
    "with-uuid-1",
] }
bytes = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rwf-macros = { path = "../rwf-macros", version = "0.1.12" }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
base64 = "0.22"
aes-gcm-siv = "0.11"
aes = "0.8"
rand = { version = "0.8", features = ["getrandom"] }
regex = "1"
sha1 = "0.10"
toml = "0.8"
pyo3 = { version = "0.22", features = ["auto-initialize"], optional = true }
rayon = { version = "1", optional = true }
uuid = { version = "1", features = ["v4"] }
notify = "7"
rwf-ruby = { path = "../rwf-ruby", optional = true, version = "0.1.0" }

[dev-dependencies]
tempdir = "0.3"

[build-dependencies]
bindgen = "0.65.1"
cc = "1"
