[package]
name = "background-jobs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rwf = { path = "../../rwf" }
tokio = { version = "1", features = ["full"]}
serde_json = "1"
serde = { version = "1", features = ["derive"]}
log = "*"