[package]
name = "dynamic-templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rwf = { path = "../../rwf" }
serde = { features = ["derive"], version = "1" }
tokio = { version = "1", features = ["full"]}
rand = "0.8"
