[package]
name = "rest"
version = "0.1.0"
edition = "2021"
default-run = "rest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "migrations"
path = "bin/migrations/main.rs"

[dependencies]
rwf = { path = "../../rwf" }
serde = { version = "1", features = ["derive"]}
time = { version = "*", features = ["serde"] }
tokio = { version = "1", features = ["full"]}
serde_json = "1"