[package]
name = "turbo"
version = "0.1.0"
edition = "2021"
default-run = "turbo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rwf = { path = "../../rwf" }
tokio = { version = "1", features = ["full"]}
tracing = "*"
rand = "0.8"
serde_json = "1"
serde = {version = "1", features = ["derive"]}
time = "0.3"
rwf-admin = { path = "../../rwf-admin" }
